[package]
name = "link_yeeter"
version = "3.1.2"
authors = ["Wojciech Jarząbek <WojciechJarzabek@windowslive.com>"]
edition = "2024"
publish = false

[profile.dev]
debug = true

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = { level = "warn", priority = -1 }

[dependencies]
# bot runtime
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }

# async utilities
async-fs = "2.2.0"
async-process = "2.5.0"
deadqueue = "0.2.5"
futures = "0.3.31"
tokio-util = "0.7.16"

# general utilities
dotenvy = "0.15.7"
ffprobe = "0.4.0"
linkify = "0.10.0"
rand = "0.9.2"
tempfile = "3.23.0"
url = "2.5.7"
which = "8.0.0"

# logging
chrono = "0.4.42"
color-eyre = "0.6.5"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tracing = "0.1.41"
# 0.3.20 introduced a regression affecting color_eyre
tracing-subscriber = { version = "=0.3.19", features = ["time", "env-filter"] }
