[package]
name = "link_yeeter"
version = "3.2.0"
authors = ["Wojciech Jarząbek <WojciechJarzabek@windowslive.com>"]
edition = "2024"
publish = false

[profile.dev]
debug = true

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = { level = "warn", priority = -1 }

[dependencies]
# bot runtime
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }

# async utilities
async-fs = "2.2.0"
async-process = "2.5.0"
deadqueue = "0.2.5"
futures = "0.3.31"
tokio-util = "0.7.18"

# general utilities
dotenvy = "0.15.7"
ffprobe = "0.4.0"
linkify = "0.10.0"
rand = "0.10.0"
tempfile = "3.24.0"
url = "2.5.8"
which = "8.0.0"

# logging & error handling
anyhow = "1.0.101"
petname = "2.0.2"
tracing = "0.1.44"
tracing-forest = { version = "0.3.1", features = ["tokio"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
